# karmaDM

./: Makefile  README.md  default.nix  fourmolu.yaml  hie.yaml  karmaDM.cabal
app/: Main.hs
nix/: sources.json
src/: Karma.hs
test/: Main.hs
